--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>xinyue sun</title>
+    <title>Xinyue Sun's Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>This is my Profile</h1>
+    <header>
+      <h1>Welcome to Xinyue Sun's Portfolio</h1>
+    </header>
+    <main>
+      <section>
+        <h2>About Me</h2>
+        <p>Hello! I'm Xinyue Sun. This is a brief introduction...</p>
+      </section>
+
+      <section id="projects">
+        <div class="project">
+          <h3>Project 1</h3>
+          <p>Description of project 1...</p>
+        </div>
+        <div class="project">
+          <h3>Project 2</h3>
+          <p>Description of project 2...</p>
+        </div>
+        <div class="project">
+          <h3>Project 3</h3>
+          <p>Description of project 3...</p>
+        </div>
+        <!-- ... add more projects as needed ... -->
+      </section>
+    </main>
+    <footer>
+      <p>
+        Contact me at:
+        <a href="mailto:xinyues2277@gmail.com">xinyues2277@gmail.com</a>
+      </p>
+    </footer>
   </body>
 </html>
