--- a/index.html
+++ b/index.html
@@ -11,9 +11,26 @@
       <h1>Welcome to Xinyue Sun's Portfolio</h1>
     </header>
     <main>
-      <section>
+      <section class="about-me">
+        <img
+          src="xinyue_sun.jpg"
+          alt="Xinyue Sun's portrait"
+          class="profile-pic"
+        />
         <h2>About Me</h2>
-        <p>Hello! I'm Xinyue Sun. This is a brief introduction...</p>
+        <p>Hello! I'm Xinyue Sun.</p>
+        <p>
+          Check out my projects on
+          <a href="https://github.com/xinyuesunsylvia" target="_blank">GitHub</a
+          >.
+        </p>
+        <p>
+          Check out my LinkedIn on
+          <a href="https://www.linkedin.com/in/xinyues77" target="_blank"
+            >LinkedIn</a
+          >.
+        </p>
+        <div class="clearfix"></div>
       </section>
 
       <section id="projects">
