--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
           alt="Xinyue Sun's portrait"
           class="profile-pic"
         />
-        <h2>About Me</h2>
+        <h2 class="about-me-title">About Me</h2>
         <p>Hello! I'm Xinyue Sun.</p>
+        <p>Master of Science in Electrical Computer Engineer</p>
         <p>
-          Check out my projects on
+          Check out my
           <a href="https://github.com/xinyuesunsylvia" target="_blank">GitHub</a
           >.
         </p>
         <p>
-          Check out my LinkedIn on
+          Check out my
           <a href="https://www.linkedin.com/in/xinyues77" target="_blank"
             >LinkedIn</a
           >.
@@ -35,18 +36,64 @@
 
       <section id="projects">
         <div class="project">
-          <h3>Project 1</h3>
-          <p>Description of project 1...</p>
+          <h2>E-Commerce-Platform</h2>
+          <div class="project-content">
+            <p class="description">
+              This is a full-stack e-commerce platform. The front-end boasts
+              interactive user interfaces, engineered with
+              <strong>JavaScript</strong> and <strong>React</strong>, and
+              seamlessly integrates with state management through
+              <strong>Redux</strong>. The back-end, built on
+              <strong>Node.js</strong> and <strong>Express.js</strong>,
+              efficiently manages data transactions, while
+              <strong>MongoDB</strong> ensures reliable and scalable data
+              storage. This comprehensive solution offers a seamless shopping
+              experience, ensuring robust performance and user-friendly
+              interactions throughout. Check out my
+              <a
+                href="https://github.com/xinyuesunsylvia/E-Commerce-Platform"
+                target="_blank"
+                >Project</a
+              >.
+            </p>
+            <img src="preview.png" class="project1" />
+          </div>
         </div>
         <div class="project">
-          <h3>Project 2</h3>
-          <p>Description of project 2...</p>
+          <h2>Vaccine Reservation</h2>
+          <div class="description2">
+          <p>
+            The Vaccine Reservation System is an online platform for vaccine
+            appointments, comprising backend management (<strong>Java</strong>,
+            <strong>Spring Boot</strong>) and frontend user interfaces
+            (<strong>JavaScript</strong>, <strong>React</strong>) using a
+            frontend-backend separation approach. Check out my
+            <a
+              href="https://github.com/xinyuesunsylvia/Vaccine-Reservation"
+              target="_blank"
+              >Project</a
+            >.
+          </p>
+          <p class="technical-features">
+            <strong>Key Technical Features:</strong>
+            <ul class="indented-list">
+                <li>Built on SpringBoot and SpringCloud for a sturdy microservices framework.</li>
+                <li>Uses NoSQL, with Redis for fast data caching and MongoDB for high-concurrency operations.</li>
+                <li>Incorporates RabbitMQ for enhanced order concurrency.</li>
+                <li>Scheduled reminders ensure timely medical alerts.</li>
+              </ul>
+          </p>
+          <p class="integrations">
+            <strong>Integrations:</strong>
+            <ul class="indented-list">
+              <li>Alibaba Cloud OSS for data storage.</li>
+              <li>SMS for notifications.</li>
+              <li>WeChat for login, payments, and refunds.</li>
+            </ul>
+            A streamlined system tailored for efficient vaccine reservations.
+          </p>
+          </div>
         </div>
-        <div class="project">
-          <h3>Project 3</h3>
-          <p>Description of project 3...</p>
-        </div>
-        <!-- ... add more projects as needed ... -->
       </section>
     </main>
     <footer>
