--- a/index.html
+++ b/index.html
@@ -56,14 +56,7 @@
                 >Project</a
               >.
             </p>
-            <img src="preview.png" class="project1" style=" width: 200px;
-            height: 200px;
-            margin-top: 20px;
-            margin-right: 20px;
-            margin-bottom: 20px;
-            float: left;
-            display: block;
-            object-fit: cover;"/>
+            <img src="preview.png" class="project1"/>
           </div>
         </div>
         <div class="project">
