--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         />
         <h2 class="about-me-title">About Me</h2>
         <p>Hello! I'm Xinyue Sun.</p>
-        <p>Master of Science in Electrical Computer Engineer</p>
+        <p>University of Washington</p>
+        <p> </p>
+        <p>Master of Science in Electrical Computer Engineering</p>
         <p>
           Check out my
           <a href="https://github.com/xinyuesunsylvia" target="_blank">GitHub</a
