add paccar video

--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
           </p>
           </div>
         </div>
+        <div class="project">
+          <h2>PACCAR</h2>
+          <div class="project-content">
+            <p class="description">
+              Our research centers on enhancing object detection in autonomous vehicles. Traditional methods and neural networks struggle with detecting entities like pedestrians and bicycles. We refine a deep learning neural network based on the Yolov5 algorithm by adjusting hyperparameters and layers.
+
+Our innovation lies in incorporating thermal cameras known for detecting objects in darkness, fog, and adverse conditions. Merging thermal data with Lidar, radar, and visible light inputs creates a comprehensive system for object classification through machine learning.
+
+Deployed on NVIDIA Xavier GPUs, our final model achieves a remarkable 142-fps real-time processing rate, swiftly categorizing objects. Notably, our model achieves 93.7% accuracy in identifying various road users. This approach enhances autonomous vehicles' detection capabilities, bolstering their safety and efficiency.
+            </p>
+            <video controls width="100%" height="auto" class="paccar-mp4">
+              <source src="paccar.mp4" type="video/mp4">
+        
+            </video>
+          </div>
       </section>
     </main>
     <footer>
