--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         </div>
         <div class="project">
           <h2>PACCAR</h2>
+          <h3>Thermal	Imaging	Cameras</h3>
+          <h3>Machine Learning for Real-time Object Classification Project in Self-driving Trucks</h3>
           <div class="project-content">
             <p class="description">
               Our research centers on enhancing object detection in autonomous vehicles. Traditional methods and neural networks struggle with detecting entities like pedestrians and bicycles. We refine a deep learning neural network based on the Yolov5 algorithm by adjusting hyperparameters and layers.
