--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         </div>
         <div class="project">
           <h2>Vaccine Reservation</h2>
+          <div class="project-content">
           <div class="description2">
           <p>
             The Vaccine Reservation System is an online platform for vaccine
@@ -95,6 +96,8 @@
             A streamlined system tailored for efficient vaccine reservations.
           </p>
           </div>
+          <img src="reservation.png" class="project1"/>
+        </div>
         </div>
         <div class="project">
           <h2>PACCAR</h2>
